--- a/TranslationManagement.Api/TranslationManagement.Api.csproj
+++ b/TranslationManagement.Api/TranslationManagement.Api.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\External.ThirdParty.Services\External.ThirdParty.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
